[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/base_tank.gd" type="Script" id=1]
[ext_resource path="res://sprites/tank_shadow.png" type="Texture" id=2]
[ext_resource path="res://sprites/tank.png" type="Texture" id=3]
[ext_resource path="res://audio/sfx/tank_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("tank:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.266667, 0.266667, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Invulnerable"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("tank:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.29 ),
"transitions": PoolRealArray( 0.5, 2.92818, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("tank:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tank:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="base_tank" type="KinematicBody2D" groups=[
"tank",
]]
z_index = -2
script = ExtResource( 1 )
speed_fwd = 60.0
speed_rev = -40.0
rot_speed = 2.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 0 )
shape = SubResource( 1 )
disabled = true

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="tank" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Audio_Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="InvulnerableTimer" type="Timer" parent="."]
one_shot = true

[node name="EffectAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )
anims/Invulnerable = SubResource( 4 )
anims/Normal = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
position = Vector2( -26, -25 )
[connection signal="health_updated" from="." to="HealthBar" method="_on_base_tank_health_updated"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_InvulnerableTimer_timeout"]
